--- a/app/src/main/res/drawable/drawable_guide3.xml
+++ b/app/src/main/res/drawable/drawable_guide3.xml
@@ -7,7 +7,7 @@
         </shape>
     </item>
 
-    <item android:bottom="48dp">
+    <item>
         <bitmap
             android:gravity="center"
             android:src="@drawable/guide3" />
