--- a/app/src/main/res/layout/activity_auth_center.xml
+++ b/app/src/main/res/layout/activity_auth_center.xml
@@ -38,7 +38,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:numColumns="2"
-            android:verticalSpacing="20dp"/>
+            android:verticalSpacing="20dp"
+            android:layout_marginTop="20dp"/>
 
 
         <!--<RelativeLayout-->
