--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,50 +1,172 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="首页"/>
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="fitXY"
-            android:src="@drawable/img_home_top"/>
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="3">
-
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"></RelativeLayout>
-
-
-        </LinearLayout>
-
-
-        <com.app.gigj.views.widget.NoScrollGridView
-            android:id="@+id/gv_buttons"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:numColumns="2"
-            android:verticalSpacing="20dp"/>
+            android:orientation="vertical">
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="fitXY"
+                android:src="@drawable/img_home_top" />
 
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:orientation="vertical">
 
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:gravity="center">
 
-    <include
-        layout="@layout/loading_layout"/>
+                    <ImageView
+                        android:id="@+id/iv_icon_1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp"
+                        android:src="@drawable/icon_home_top1" />
 
+                    <TextView
+                        android:id="@+id/tv_title_1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="1dp"
+                        android:layout_toRightOf="@id/iv_icon_1"
+                        android:text="保险的期日"
+                        android:textColor="@color/titleColor"
+                        android:textSize="10sp" />
 
+                    <TextView
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/tv_title_1"
+                        android:layout_toRightOf="@id/iv_icon_1"
+                        android:gravity="center"
+                        android:text="180天"
+                        android:textColor="@color/colorHome1"
+                        android:textSize="11sp" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:id="@+id/iv_icon_2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp"
+                        android:src="@drawable/icon_home_top2" />
+
+                    <TextView
+                        android:id="@+id/tv_title_2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@id/iv_icon_2"
+                        android:text="距下次保养"
+                        android:textColor="@color/titleColor"
+                        android:textSize="10sp" />
+
+                    <TextView
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/tv_title_2"
+                        android:layout_toRightOf="@id/iv_icon_2"
+                        android:gravity="center"
+                        android:text="180天"
+                        android:textColor="@color/colorHome2"
+                        android:textSize="11sp" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:id="@+id/iv_icon_3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="5dp"
+                        android:src="@drawable/icon_home_top3" />
+
+                    <TextView
+                        android:id="@+id/tv_title_3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@id/iv_icon_3"
+                        android:text="距下次年审"
+                        android:textColor="@color/titleColor"
+                        android:textSize="10sp" />
+
+                    <TextView
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/tv_title_3"
+                        android:layout_toRightOf="@id/iv_icon_3"
+                        android:gravity="center"
+                        android:text="180天"
+                        android:textColor="@color/colorHome3"
+                        android:textSize="11sp" />
+                </RelativeLayout>
+            </LinearLayout>
+
+            <com.app.gigj.views.widget.NoScrollGridView
+                android:id="@+id/gv_buttons"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:numColumns="2"
+                android:verticalSpacing="20dp"
+                android:layout_marginTop="10dp"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="30dp">
+
+                <Button
+                    android:id="@+id/btn_my_safe"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/input_h"
+                    android:layout_marginRight="40dp"
+                    android:background="@drawable/button_shape_bg_home_1"
+                    android:drawableLeft="@drawable/icon_home_bot1"
+                    android:paddingLeft="10dp"
+                    android:text=" 我的保单  "
+                    android:textColor="@color/colorWhite" />
+
+                <Button
+                    android:id="@+id/btn_auth_center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/input_h"
+                    android:background="@drawable/button_shape_bg_home_2"
+                    android:drawableLeft="@drawable/icon_home_bot2"
+                    android:paddingLeft="10dp"
+                    android:text=" 认证中心  "
+                    android:textColor="@color/colorWhite" />
+
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+
+    <include layout="@layout/loading_layout" />
 </FrameLayout>
