--- a/app/src/main/res/layout/item_auth_id.xml
+++ b/app/src/main/res/layout/item_auth_id.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ll_22"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_below="@id/ll_11"
-    android:layout_toRightOf="@id/ll_21"
-    android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center">
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
