--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,8 +3,8 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/colorBlack</item>
+        <item name="colorPrimaryDark">@color/colorBlack</item>
         <item name="colorAccent">@color/colorAccent</item>
 
         <item name="android:textSize">16sp</item>
@@ -36,6 +36,13 @@
         <item name="android:layout_height">@dimen/input_h</item>
         <item name="android:layout_marginTop">@dimen/margin_top_com</item>
         <item name="android:background">@drawable/input_frame_bg</item>
+    </style>
+
+    <style name="TitleFrameStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/item_h</item>
+        <item name="android:layout_marginTop">@dimen/margin_top_com</item>
+        <item name="android:background">@drawable/input_frame_bg_title</item>
     </style>
 
     <style name="InputTvStyle">
