--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -26,6 +26,7 @@
                 style="@style/InputLine"/>
 
             <EditText
+                android:id="@+id/et_phone"
                 style="@style/InputET"
                 android:hint="请输入手机号"/>
 
@@ -43,6 +44,7 @@
                 style="@style/InputLine"/>
 
             <EditText
+                android:id="@+id/et_pw"
                 style="@style/InputET"
                 android:hint="请输入密码"/>
         </LinearLayout>
@@ -59,13 +61,14 @@
                 style="@style/InputLine"/>
 
             <EditText
+                android:id="@+id/et_nick_name"
                 style="@style/InputET"
-                android:hint="请输入用户名"/>
+                android:hint="请输入昵称"/>
         </LinearLayout>
 
+        <!--注册地址-->
         <LinearLayout
             style="@style/InputLLStyle">
-
             <TextView
                 style="@style/InputTvStyle"
                 android:drawableLeft="@drawable/icon_location"
@@ -74,9 +77,11 @@
             <View
                 style="@style/InputLine"/>
 
-            <EditText
+            <TextView
+                android:id="@+id/tv_address"
                 style="@style/InputET"
-                android:hint="请输入密码"/>
+                android:gravity="center_vertical"
+                android:hint="省/市"/>
         </LinearLayout>
 
         <LinearLayout
@@ -91,6 +96,7 @@
                 style="@style/InputLine"/>
 
             <EditText
+                android:id="@+id/et_company"
                 style="@style/InputET"
                 android:hint="请输入公司名"/>
         </LinearLayout>
@@ -112,6 +118,7 @@
                     style="@style/InputLine"/>
 
                 <EditText
+                    android:id="@+id/et_code"
                     style="@style/InputET"
                     android:hint="请输入验证码"/>
             </LinearLayout>
@@ -125,7 +132,7 @@
                 android:background="@color/colorMain"
                 android:text="获取验证码"
                 android:textColor="@color/colorWhite"
-            android:textSize="13sp"/>
+                android:textSize="13sp"/>
         </LinearLayout>
 
 
