--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -3,14 +3,10 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ListView
+        android:id="@+id/lv_menu"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="订单"/>
-
-    
-    <include
-        layout="@layout/loading_layout"/>
-
+        android:divider="@null"/>
 
 </FrameLayout>
