--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,6 @@
         android:layout_marginTop="@dimen/top_bar_height"
         android:orientation="vertical">
 
-
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -22,7 +21,6 @@
             android:layout_marginBottom="40dp"
             android:layout_marginTop="40dp"
             android:src="@drawable/logo_login"/>
-
 
         <LinearLayout
             style="@style/InputLLStyle">
@@ -33,8 +31,10 @@
             <View
                 style="@style/InputLine"/>
             <EditText
+                android:id="@+id/et_phone"
                 style="@style/InputET"
-                android:hint="请输入手机号"/>
+                android:hint="请输入手机号"
+                android:inputType="phone"/>
         </LinearLayout>
 
 
@@ -48,6 +48,7 @@
             <View
                 style="@style/InputLine"/>
             <EditText
+                android:id="@+id/et_password"
                 style="@style/InputET"
                 android:hint="请输入密码"
                 android:inputType="numberPassword"/>
