--- a/app/src/main/res/layout/select_list_item.xml
+++ b/app/src/main/res/layout/select_list_item.xml
@@ -2,17 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="vertical"
-              android:paddingTop="15dp">
+              android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
         android:layout_marginLeft="@dimen/margin_left"
         android:text="afasfafas"
-        android:textColor="@color/commonColor"/>
+        android:textColor="@color/commonColor"
+        android:layout_margin="@dimen/margin_com"/>
 
     <include
         layout="@layout/layout_line"/>
