--- a/app/src/main/res/layout/item_gasoline_card.xml
+++ b/app/src/main/res/layout/item_gasoline_card.xml
@@ -21,29 +21,31 @@
         <include
             layout="@layout/layout_gasoline_card"/>
 
-        <LinearLayout
-            android:layout_width="62dp"
-            android:layout_height="62dp"
-            android:layout_gravity="right"
-            android:background="@drawable/shape_page_round_bg"
-            android:gravity="center"
-            android:orientation="vertical">
+        <include
+            layout="@layout/layout_price"/>
+        <!--<LinearLayout-->
+            <!--android:layout_width="62dp"-->
+            <!--android:layout_height="62dp"-->
+            <!--android:layout_gravity="right"-->
+            <!--android:background="@drawable/shape_page_round_bg"-->
+            <!--android:gravity="center"-->
+            <!--android:orientation="vertical">-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="面额"
-                android:textColor="@color/colorWhite"
-                android:textSize="15sp"/>
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="面额"-->
+                <!--android:textColor="@color/colorWhite"-->
+                <!--android:textSize="15sp"/>-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="1000.0"
-                android:textColor="@color/colorWhite"
-                android:textSize="15sp"/>
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="1000.0"-->
+                <!--android:textColor="@color/colorWhite"-->
+                <!--android:textSize="15sp"/>-->
 
-        </LinearLayout>
+        <!--</LinearLayout>-->
     </FrameLayout>
 
     <View
