--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -91,6 +91,13 @@
         <item name="android:layout_marginTop">5dp</item>
     </style>
 
+    <!--common text-->
+    <style name="TextConStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/titleColor</item>
+        <item name="android:textSize">12sp</item>
+    </style>
 
 </resources>
 
