--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -99,5 +99,17 @@
         <item name="android:textSize">12sp</item>
     </style>
 
+    <!--single text info-->
+
+    <style name="TextSingleStyle">
+        <item name="android:layout_width">@dimen/single_width</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/titleColor</item>
+        <item name="android:textSize">@dimen/tip_font_size</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:lines">1</item>
+        <item name="android:layout_marginTop">5dp</item>
+    </style>
+
 </resources>
 
