--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -69,4 +69,8 @@
 
     <color name="colorHome4">#747CE4</color>
     <color name="colorHome5">#63BD22</color>
+
+
+    <color name="colorHelp">#65AEDC</color>
+
 </resources>
