--- a/app/src/main/res/layout/activity_accident_add.xml
+++ b/app/src/main/res/layout/activity_accident_add.xml
@@ -10,12 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/top_bar_height"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/common_margin">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:layout_margin="@dimen/common_margin"
             android:gravity="center_vertical">
             <TextView
                 android:layout_width="wrap_content"
@@ -43,8 +43,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:layout_margin="@dimen/common_margin"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:layout_marginTop="10dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -71,8 +71,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:layout_margin="@dimen/common_margin"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:layout_marginTop="10dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -99,8 +99,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:layout_margin="@dimen/common_margin"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:layout_marginTop="10dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -116,7 +116,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/common_margin">
+            android:layout_marginTop="10dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -128,14 +128,17 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@drawable/input_frame_bg"
-                android:lines="4"/>
+                android:gravity="top"
+                android:lines="4"
+                android:padding="5dp"
+                android:textColor="@color/commonColor"/>
         </LinearLayout>
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/common_margin">
+            android:layout_marginTop="10dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -166,7 +169,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/common_margin">
+            android:layout_marginTop="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -176,24 +179,24 @@
                 android:text="现场相片"/>
 
             <ImageView
-                android:layout_width="89dp"
-                android:layout_height="56dp"
-                android:layout_marginRight="5dp"
+                android:layout_width="60dp"
+                android:layout_height="40dp"
+                android:layout_marginRight="15dp"
                 android:layout_marginTop="6dp"
                 android:background="@color/hintColor"
                 android:scaleType="center"
                 android:src="@drawable/icon_add"/>
             <ImageView
-                android:layout_width="89dp"
-                android:layout_height="56dp"
-                android:layout_marginRight="5dp"
+                android:layout_width="60dp"
+                android:layout_height="40dp"
+                android:layout_marginRight="15dp"
                 android:layout_marginTop="6dp"
                 android:background="@color/hintColor"
                 android:scaleType="center"
                 android:src="@drawable/icon_add"/>
             <ImageView
-                android:layout_width="89dp"
-                android:layout_height="56dp"
+                android:layout_width="60dp"
+                android:layout_height="40dp"
                 android:layout_marginTop="6dp"
                 android:background="@color/hintColor"
                 android:scaleType="center"
@@ -205,8 +208,6 @@
             android:id="@+id/btn_submit"
             android:layout_width="match_parent"
             android:layout_height="@dimen/input_h"
-            android:layout_marginLeft="@dimen/common_margin"
-            android:layout_marginRight="@dimen/common_margin"
             android:layout_marginTop="20dp"
             android:background="@color/colorMain"
             android:text="上传事故信息"
