--- a/app/src/main/res/layout/activity_accident_mana.xml
+++ b/app/src/main/res/layout/activity_accident_mana.xml
@@ -1,7 +1,21 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
 
-</LinearLayout>
+    <include
+        layout="@layout/top_bar_layout"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/top_bar_height"
+        android:orientation="vertical">
+
+
+    </LinearLayout>
+
+    <include
+        layout="@layout/loading_layout"/>
+
+
+</FrameLayout>
