--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -23,9 +23,7 @@
                     android:id="@+id/iv_head"
                     android:layout_width="55dp"
                     android:layout_height="55dp"
-                    android:layout_marginRight="10dp"
-                    android:background="@color/colorPrimary"/>
-
+                    android:layout_marginRight="10dp"/>
                 <TextView
                     android:id="@+id/tv_user_name"
                     android:layout_width="wrap_content"
