--- a/app/src/main/res/layout/item_car_team.xml
+++ b/app/src/main/res/layout/item_car_team.xml
@@ -1,54 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:padding="20dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="@color/colorWhite"
+              android:orientation="vertical">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:padding="20dp">
 
-    <ImageView
-        android:id="@+id/iv_head"
-        android:layout_width="@dimen/user_head_size"
-        android:layout_height="@dimen/user_head_size"
-        android:layout_marginRight="15dp"
-        android:background="@color/colorMain"/>
+        <ImageView
+            android:id="@+id/iv_head"
+            android:layout_width="@dimen/user_head_size"
+            android:layout_height="@dimen/user_head_size"
+            android:layout_marginRight="15dp"
+            android:background="@color/colorMain"/>
 
-    <TextView
-        android:id="@+id/tv_name"
-        style="@style/TextConStyle"
-        android:layout_toRightOf="@id/iv_head"
-        android:text="姓名：李四"/>
+        <TextView
+            android:id="@+id/tv_name"
+            style="@style/TextConStyle"
+            android:layout_toRightOf="@id/iv_head"
+            android:text="姓名：李四"/>
 
-    <TextView
-        android:id="@+id/tv_state"
-        style="@style/TextConStyle"
-        android:layout_marginLeft="80dp"
-        android:layout_toRightOf="@id/tv_name"
-        android:text="工作：状上班中"/>
+        <TextView
+            android:id="@+id/tv_state"
+            style="@style/TextConStyle"
+            android:layout_marginLeft="80dp"
+            android:layout_toRightOf="@id/tv_name"
+            android:text="工作：状上班中"/>
 
-    <TextView
-        android:id="@+id/tv_phone"
-        style="@style/TextConStyle"
-        android:layout_below="@id/tv_name"
-        android:layout_marginTop="5dp"
-        android:layout_toRightOf="@id/iv_head"
-        android:text="电话：13669699696"/>
+        <TextView
+            android:id="@+id/tv_phone"
+            style="@style/TextConStyle"
+            android:layout_below="@id/tv_name"
+            android:layout_marginTop="5dp"
+            android:layout_toRightOf="@id/iv_head"
+            android:text="电话：13669699696"/>
 
-    <TextView
-        android:id="@+id/tv_car_num"
-        style="@style/TextConStyle"
-        android:layout_alignLeft="@id/tv_state"
-        android:layout_below="@id/tv_name"
-        android:layout_marginTop="5dp"
-        android:layout_toRightOf="@id/tv_phone"
-        android:text="车牌号：鄂D5826"/>
+        <TextView
+            android:id="@+id/tv_car_num"
+            style="@style/TextConStyle"
+            android:layout_alignLeft="@id/tv_state"
+            android:layout_below="@id/tv_name"
+            android:layout_marginTop="5dp"
+            android:layout_toRightOf="@id/tv_phone"
+            android:text="车牌号：鄂D5826"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="25dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:background="@color/colorMain"
-        android:text="联系"
-        android:textColor="@color/colorWhite"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:background="@color/colorMain"
+            android:text="联系"
+            android:textColor="@color/colorWhite"/>
+    </RelativeLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@color/pageBgColor"/>
 
-</RelativeLayout>
+</LinearLayout>
