--- a/app/src/main/res/layout/item_shipper_order.xml
+++ b/app/src/main/res/layout/item_shipper_order.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              android:background="@color/colorWhite"
               android:gravity="center_vertical"
               android:orientation="vertical">
 
@@ -71,7 +72,7 @@
         android:id="@+id/gv_pro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:numColumns="5"
         android:verticalSpacing="10dp"/>
 
@@ -146,7 +147,11 @@
             android:text="查看位置"
             android:textColor="@color/colorWhite"
             android:textSize="10sp"/>
-
     </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@color/pageBgColor"/>
 
 </LinearLayout>
